[project]
name = "nuvola-tests"
version = "0.1.0"
description = ""
authors = [
    { name = "Edoardo Rosa", email = "208119880+notdodo-prima@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = ["terraform-local (>=0.26.0,<0.27.0)", "awscli-local (>=0.22.2,<0.23.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
